--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aframe": "^0.8.2",
     "aframe-animation-component": "^4.2.0",
     "aframe-environment-component": "^1.0.0",
+    "aframe-fps-counter-component": "^1.0.1",
     "aframe-lerp-component": "^1.1.0",
     "aframe-text-geometry-component": "^0.5.1",
     "axios": "^0.18.0",
