--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "aframe-lerp-component": "^1.1.0",
     "aframe-text-geometry-component": "^0.5.1",
     "axios": "^0.18.0",
+    "extract-svg-path": "^2.1.0",
+    "load-svg": "^1.0.0",
+    "svg-mesh-3d": "^1.1.0",
+    "three-simplicial-complex": "^69.0.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
