será que acabou? acho que sim!

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.18.0",
     "extract-svg-path": "^2.1.0",
     "load-svg": "^1.0.0",
+    "socket.io": "^2.1.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
